--- a/catalogo_anime/templates/catalogo_anime/galeria_anime_manga.html
+++ b/catalogo_anime/templates/catalogo_anime/galeria_anime_manga.html
@@ -1,5 +1,8 @@
 {% extends "base.html" %}
 
+{% block title %}
+    Catálogo de Animes | {{ block.super }}
+{% endblock %}
 
 {% block container %}
 
