--- a/catalogo_anime/templates/catalogo_anime/galeria_genero.html
+++ b/catalogo_anime/templates/catalogo_anime/galeria_genero.html
@@ -1,5 +1,8 @@
 {% extends "base.html" %}
 
+{% block title %}
+    {{ current_genero }} | {{ block.super }}
+{% endblock %}
 
 {% block container %}
 
@@ -10,7 +13,7 @@
   <div class="row">
 
     <div class="col-lg-12">
-      <h1 class="page-header">Anime</h1>
+      <h1 class="page-header">{{ current_genero }}</h1>
     </div>
     {% for anime in animes_list %}
     <div class="col-lg-3 col-md-4 col-xs-6 thumb">
