--- a/core/templates/sobre.html
+++ b/core/templates/sobre.html
@@ -1,5 +1,10 @@
 {% extends "base.html" %}
 
+{% block title %}
+    Sobre | {{ block.super }}
+{% endblock %}
+
+
 {% block container %}
 
 <div class="container">
