--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -10,6 +10,8 @@
   <meta name="Site de banco de dados de animes" content="">
   <title>{% block title %}Anime Vício Desu{% endblock %}</title>
 
+  <link rel="icon" type="image/ico" href="{% static 'assets/14/favicon3.ico' %}">
+
   <link href="{% static 'assets/bootstrap.min.css' %}" rel="stylesheet">
   <link href="{% static 'assets/starter-template.css' %}" rel="stylesheet">
   <link href="{% static 'assets/custom.min.css' %}" rel="stylesheet">
